--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "watch": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
+    "watch": "npm-run-all build:* build-dev -p watch:*",
+    "test:js": "eslint js/",
+    "test": "npm-run-all test:*",
     "init-project": "mkdir css js scss && echo > js/script.js && echo > css/style.css && echo > scss/style.scss"
   },
   "repository": {
@@ -19,8 +21,10 @@
   "homepage": "https://github.com/11052025/puste-repozytorium#readme",
   "devDependencies": {
     "browser-sync": "^3.0.4",
+    "eslint": "^8.56.0",
     "html-validate": "^9.7.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "accepts": "^1.3.8",
